--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -51,5 +51,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "Chapter-2---Stack-vs-Heap.sln"
+    "dotnet.defaultSolution": "Chapter-2-Stack-vs-Heap.sln"
 }
